package de.gkvtransmitter.dispatch;

public enum BillingOfficeResponseType {
    ACCEPTED,
    REJECTED,
    TECHNICAL_ERROR,
    SYNTAX_ERROR,
    UNKNOWN
}
