package de.gkvtransmitter.dispatch;

public enum BillingOfficeTransportType {
    FILE
}
